syntax = "proto3";

message PhotoUploaded {
  string path = 1;
}

message PhotoRearrange {
  string albumId = 1;
  string path = 2;
  string after = 3;
}

message PhotoDelete {
  string path = 1;
}

message AlbumRemovePhoto {
  string albumId = 1;
  string path = 2;
}

message AlbumCreate {
  string id = 1;
  string name = 2;
}

message AlbumRename {
  string id  = 1;
  string newName = 2;
}

message AlbumAddPhoto {
  string albumId = 1;
  string path = 2;
  string after = 3;
}